--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 3rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    padding-left: 3rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Vier kolommen */
     gap: 2rem;
@@ -23,6 +25,6 @@ h1 {
 .card {
     background-color: #4B3F06;
     max-width: 10rem;
-    max-height: 10rem;
+    max-height: 12rem;
     border-radius: 1rem;
 }
