card rendered in js

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ h1 {
     color: #322A04;
 }
 
-.container {
+#container {
     background-color: #FADC44;
     min-width: 62.9375rem;
     min-height: 42.0625rem;
