--- a/css/styles.css
+++ b/css/styles.css
@@ -33,4 +33,12 @@ h1 {
         color: #FDEDA1;
         margin-top: 1rem;
     }
+
+    & img {
+        display: none;
+    }
+}
+
+.card.flipped img {
+    display: block;
 }
