--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ h1 {
         border: 1px solid #4B3F06;
         border-radius: 1rem;
         margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 
     & a {
