--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,40 @@ h1 {
         color: #4B3F06;
     }
 }
+
+.hamburger{
+    & .wrapper{
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 100%;
+        height: 100%;
+
+        background-color: #4B3F06;
+        transition: all .5s ease-in-out;
+    }
+
+    & #active:checked + .wrapper{
+        right: 0;
+    }
+
+    & .menu-btn {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        z-index: 1;
+        cursor: pointer;
+    }
+
+    & .menu-btn span,
+      .menu-btn::before,
+        .menu-btn::after {
+            content: '';
+            position: absolute;
+            width: 2rem;
+            height: 0.25rem;
+            background-color: #FDEDA1;
+            border-radius: 0.25rem;
+            transition: all .5s ease-in-out;
+        }
+}
