--- a/css/stappenplan.css
+++ b/css/stappenplan.css
@@ -44,13 +44,25 @@ body{
                     font-family: Arial, Helvetica, sans-serif;
                 }
             }
+
+            li:hover {
+                font-weight: 700; 
+          }
         }
     }
 }
 
+.bg-img--1 {
+    background-image: url('../img/blad-1.png');
+    background-repeat: no-repeat;
+    background-position: -60px -50px;
+    padding: 0;
+    margin: 0;
+
+}
+
 .stappenplan {
     width: 80%;
-    margin: 1rem;
     display: flex;
     flex-direction: column;
 
@@ -61,11 +73,12 @@ body{
     & li:hover {
         background-color: #FBE573;
         border: 2px solid #4B3F06;
-    }
+        }
 }
 
 .title_SP{
     margin: 2rem auto;
+    padding-bottom: 2.5rem;
 
     display: flex;
     flex-direction: column;
