--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,10 @@ h1 {
                     font-family: Arial, Helvetica, sans-serif;
                 }
             }
+
+            li:hover {
+                font-weight: 700; 
+          }
         }
     }
 
