--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,20 @@
 body {
     background-color: #FDEDA1;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 
 h1 {
     color: #322A04;
+}
+
+.bg-img--2 {
+    background-image: url('../img/blad-1.png'), url(../img/blad-2.png), url(../img/blad-3.png), url(../img/blad-4.png), url(../img/blad-3.png), url(../img/blad-1.png);
+    background-repeat: no-repeat;
+    background-position: -80px -50px, 30px -50px, 200px -50px, 1000px -50px, 900px -50px, 1100px -50px;
+    padding: 0;
+    margin: 0;
 }
 
 #container {
