--- a/css/stappenplan.css
+++ b/css/stappenplan.css
@@ -10,13 +10,29 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.details {
+    & .details__content {
+      display: none;
+      opacity: 1;
+      transition: opacity 0.5s linear;
+  
+      
+    }
+  
+    &[open] {
+      & .details__content {
+        display: block;
+      }
+    }
+  }
+
 .SP__container {
     display: flex;
 
     & aside {
         width: 20%;
         padding-top: 5rem;
-        height: 1000vh;
+        height: 350vh;
         padding-left: 2rem;
         
 
