--- a/css/stappenplan.css
+++ b/css/stappenplan.css
@@ -43,6 +43,10 @@ body{
         flex-direction: column;
         align-items: flex-start;
 
+        & h2{
+            font-family: "Shadows Into Light Two", cursive;
+        }
+
         & ul {
             list-style-type: none;
             display: flex;
