--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-h1 {
-    color: #322A04;
-}
-
 .bg-img--2 {
-    background-image: url('../img/blad-1.png'), url(../img/blad-2.png), url(../img/blad-3.png), url(../img/blad-4.png), url(../img/blad-3.png), url(../img/blad-1.png);
+    background-image: url('../img/blad-1.png'), url(../img/blad-2.png), url(../img/blad-3.png),url('../img/blad-1.png'), url(../img/blad-2.png), url(../img/blad-3.png), url(../img/blad-4.png), url(../img/blad-1.png), url(../img/blad-4.png), url(../img/blad-3.png), url(../img/blad-1.png);
     background-repeat: no-repeat;
-    background-position: -80px -50px, 30px -50px, 200px -50px, 1000px -50px, 900px -50px, 1100px -50px;
+    background-position: -80px -50px, 30px -50px, 200px -50px, 300px -50px, 400px -50px, 550px -50px,650px -50px, 780px -50px, 1000px -50px, 900px -50px, 1100px -50px;
     padding: 0;
     margin: 0;
 }
@@ -123,6 +118,10 @@ h1 {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+
+        & h2{
+            font-family: "Shadows Into Light Two", cursive;
+        }
 
         & ul {
             list-style-type: none;
