--- a/css/stappenplan.css
+++ b/css/stappenplan.css
@@ -10,6 +10,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+h1{
+    font-family: "Shadows Into Light Two", cursive;
+}
+
 .details {
     & .details__content {
       display: none;
@@ -122,6 +126,7 @@ body{
     & h2{
         color: var(--textColor);
         margin: 1rem auto;
+        font-family: "Shadows Into Light Two", cursive;
     }
 
     & ul{
@@ -158,6 +163,7 @@ body{
     & h2{
         color: var(--textColor);
         margin: 1rem auto;
+        font-family: "Shadows Into Light Two", cursive;
     }
 
     & ul{
@@ -191,6 +197,7 @@ body{
     & h2{
         color: var(--textColor);
         margin: 1rem auto;
+        font-family: "Shadows Into Light Two", cursive;
     }
 
     & ul{
