--- a/css/stappenplan.css
+++ b/css/stappenplan.css
@@ -8,6 +8,7 @@
 body{
     background-color: var(--background);
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
 }
 
 h1{
@@ -32,11 +33,13 @@ h1{
 
 .SP__container {
     display: flex;
+    min-height: 100vh;
+    flex-direction: row;
 
     & aside {
-        width: 20%;
+        width: 15%;
         padding-top: 5rem;
-        height: 380vh;
+        height: auto;
         padding-left: 2rem;
         
 
