--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ body {
             display: grid;
             grid-template-columns: repeat(4, 1fr); 
             gap: 2rem;
-            margin: 5rem 2rem;
+            /* margin: 5rem 2rem; */
         }
     }
 }
